fdo#44270: vcl: GTK+ file picker: fix non-grouped filter patterns

lcl_CreateAutoMarkFileDlg calls appendFilter() with "... (*.sdi)" and the
GTK+ file picker then strips off the (*.sdi) in the string given to GTK+
and then doesn't compare result properly with its stored filters; only
filters added with appendFilterGroup() work but not appendFilter() ones.

Change-Id: I0ac9272b5606ff8b81f0c14160fc6972789bb1ea
(cherry picked from commit ff5ad7e379315faa3f4afa009d23f34c7d231d9a)
Reviewed-on: https://gerrit.libreoffice.org/7835
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>